--- a/app/css/global-styles.html
+++ b/app/css/global-styles.html
@@ -94,7 +94,7 @@
                 box-shadow: 0 1px 4px rgba(0,0,0,.23), 0 1px 4px rgba(0,0,0,.16);
             }
 
-            paper-card {
+            paper-card#design {
                 min-width: 300px;
                 min-height: 160px;
                 margin-bottom: 6px;
