--- a/app/player.html
+++ b/app/player.html
@@ -38,6 +38,7 @@
     <script src="lib/sender/SenderPluginManager.js"></script>
 
     <script src="lib/Utils.js"></script>
+    <script src="lib/net/p2p/P2p.js"></script>
     <script src="servicesPlayer.js"></script>
     <!-- TODO end -->
   </head>
