--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -40,6 +40,7 @@
     <script src="lib/core/Module.js"></script>
 
     <script src="lib/Utils.js"></script>
+    <script src="lib/net/p2p/P2p.js"></script>
     <script src="services.js"></script>
     <!-- TODO end -->
   </head>
