--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -41,6 +41,9 @@
 
     <script src="lib/Utils.js"></script>
     <script src="lib/net/p2p/P2p.js"></script>
+
+    <script src="lib/parse/BufferToObject.js"></script>
+    <script src="lib/parse/ObjectToString.js"></script>
     <script src="services.js"></script>
     <!-- TODO end -->
   </head>
