Refactor timer and video panel

--- a/app/module/media-device/index.html
+++ b/app/module/media-device/index.html
@@ -29,7 +29,7 @@
             <div id="add">
                 <media-device-view-upsert>
                     <div slot="header" class="flex flex-horizontal flex-vertical-center header">
-                        <paper-icon-button icon="app:back" on-tap="displayListView" title="Torna alla lista dei match"></paper-icon-button>
+                        <paper-icon-button icon="app:back" on-tap="displayListView" title="Torna alla lista dei media device"></paper-icon-button>
                         <div>Aggiungi un device</div>
                     </div>
                 </media-device-view-upsert>
@@ -37,7 +37,7 @@
             <div id="update">
                 <media-device-view-upsert resource="{{mediaDevice}}">
                     <div slot="header" class="flex flex-horizontal flex-vertical-center header">
-                        <paper-icon-button icon="app:back" on-tap="displayListView" title="Torna alla lista dei match"></paper-icon-button>
+                        <paper-icon-button icon="app:back" on-tap="displayListView" title="Torna alla lista dei media device"></paper-icon-button>
                         <div>Aggiungi un device</div>
                     </div>
                 </media-device-view-upsert>
