--- a/app/module/dashboard/element/widget/widget.html
+++ b/app/module/dashboard/element/widget/widget.html
@@ -1,33 +1,68 @@
 <link rel="import" href="../../../../bower_components/polymer/polymer.html">
 
+<link rel="import" href="../../../../bower_components/paper-menu-button/paper-menu-button.html">
+<link rel="import" href="../../../../bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../../../../bower_components/paper-listbox/paper-listbox.html">
+<link rel="import" href="../../../../bower_components/paper-item/paper-item.html">
+
 <dom-module id="widget-wc">
     <template>
         <style>
             :host {
-                overflow: hidden;
                 background-color: #FFFFFF;
                 box-shadow: 2px 2px 2px 2px #909196;
                 -webkit-box-shadow: 2px 2px 2px 2px #909196;
                 -moz-box-shadow: 2px 2px 2px 2px #909196;
-                overflow-y: hidden;
+                overflow: hidden;
+            }
+
+            .container {
+                height: 100%;
+            }
+
+            .header {
+                height: 60px;
+                background-color: #689F38;
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                font-size: 20px;
+            }
+
+            .header .sub-title {
+                font-style: italic;
+                padding-left: 8px;
+                color: #3c3c3c;
             }
 
             .content {
-                position: absolute;
-                top: 0;
-                left: 0;
+                padding: 8px 0 8px 0;
                 width: 100%;
-                height: 98%;
+                height: 82%;
                 cursor: move;
-                overflow: auto;
+                overflow-y: auto;
+                overflow-x: hidden;
+                font-size: 18px;
             }
 
-            div.content ::slotted([resize]) {
+            .header .data {
+                display: flex;
+                justify-content: center;
+                flex: 1;
+            }
+
+            .overlay {
+                position: absolute;
+                height: 100%;
+                width: 100%;
+            }
+
+            div.overlay ::slotted([resize]) {
                 font-size: 20px;
                 color: transparent;
             }
 
-            div.content ::slotted([resize]:hover) {
+            div.overlay ::slotted([resize]:hover) {
                 color: black;
             }
 
@@ -35,17 +70,17 @@
                 cursor: move;
             }
 
-            div.content ::slotted([slot=top-left]),
-            div.content ::slotted([slot=top-right]),
-            div.content ::slotted([slot=top])
+            div.overlay ::slotted([slot=top-left]),
+            div.overlay ::slotted([slot=top-right]),
+            div.overlay ::slotted([slot=top])
             {
                 line-height: 10px;
             }
 
 
-            div.content ::slotted([slot=bottom-left]),
-            div.content ::slotted([slot=bottom-right]),
-            div.content ::slotted([slot=bottom])
+            div.overlay ::slotted([slot=bottom-left]),
+            div.overlay ::slotted([slot=bottom-right]),
+            div.overlay ::slotted([slot=bottom])
             {
                 line-height: 12px;
             }
@@ -55,22 +90,34 @@
                 top: 0;
                 right: 0;
             }
-
-
         </style>
 
-        <div id="content" class="content">
-            <div class="remove">
-                <paper-icon-button icon="app:remove" on-tap="customRemove"></paper-icon-button>
+        <div class="container">
+            <div class="overlay">
+                <slot name="top"></slot>
+                <slot name="top-right"></slot>
+                <slot name="top-left"></slot>
+                <slot name="bottom"></slot>
+                <slot name="bottom-right"></slot>
+                <slot name="bottom-left"></slot>
+                <slot name="left"></slot>
+                <slot name="right"></slot>
             </div>
-            <slot name="top"></slot>
-            <slot name="top-right"></slot>
-            <slot name="top-left"></slot>
-            <slot name="bottom"></slot>
-            <slot name="bottom-right"></slot>
-            <slot name="bottom-left"></slot>
-            <slot name="left"></slot>
-            <slot name="right"></slot>
+            <div class="header">
+                <div class="data">
+                    {{title}}: <span class="sub-title">{{subTitle}}</span>
+                </div>
+                <div class="action">
+                    <paper-menu-button ignore-select style="padding: 0">
+                        <paper-icon-button icon="app:more" slot="dropdown-trigger" alt="multi menu"></paper-icon-button>
+                        <paper-listbox slot="dropdown-content" class="auto" multi>
+                            <paper-item item="{{videoPanel}}"  on-tap="_remove">Elimina</paper-item>
+                        </paper-listbox>
+                    </paper-menu-button>
+                </div>
+
+            </div>
+            <div id="content" class="content"></div>
         </div>
     </template>
 
@@ -128,13 +175,10 @@
                 };
             }
 
-            ready() {
-                super.ready();
-
-
-            }
-
-
+            /**
+             * @param newValue
+             * @param oldValue
+             */
             _changedWc(newValue, oldValue) {
 
                 if (!newValue || newValue == oldValue) {
@@ -146,8 +190,12 @@
                 elem.loadData();
                 elem.classList.add("move");
 
+                this.title = elem.getTitle();
+                this.subTitle = elem.getSubTitle();
+
                 this.$.content.appendChild(elem);
             }
+
             /**
              * @return {Widget}
              */
@@ -182,7 +230,7 @@
             /**
              *
              */
-            customRemove() {
+            _remove() {
                 this.dispatchEvent(new CustomEvent('customRemove'));
             }
         }
