Fix video panel

--- a/app/module/video-panel/index.html
+++ b/app/module/video-panel/index.html
@@ -31,8 +31,8 @@
 
         </style>
         <paper-tabs selected="{{selected}}" tabindex="0">
-            <paper-tab>Sideline </paper-tab>
-            <paper-tab>Sideline resource</paper-tab>
+            <paper-tab>Video Panel </paper-tab>
+            <paper-tab>Video Panel Resource</paper-tab>
         </paper-tabs>
         <iron-pages id="ironPages" selected="{{selected}}">
             <div>
